--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Explore our McDonald's clone site featuring a product page with detailed descriptions and images of your favorite meals. Add items to your cart and experience an easy and convenient checkout process."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.svg" />
     <!--
